@@ -39,7 +39,6 @@ for k, v in pairs({
   health = true,
   secure = true,
   snippet = true,
-  status = true,
   pack = true,
   _watch = true,
   net = true,
