@@ -26,7 +26,6 @@ vim.range = require('vim.range')
 vim.re = require('vim.re')
 vim.secure = require('vim.secure')
 vim.snippet = require('vim.snippet')
-vim.status = require('vim.status')
 vim.text = require('vim.text')
 vim.treesitter = require('vim.treesitter')
 vim.ui = require('vim.ui')
